# aion

./: CMakeLists.txt  README.md  config.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt  control_window.cpp  control_window.h  control_window.hpp  main.cpp  main_window.cpp  main_window.h  pixel_data.cpp  pixel_data.h  render_window.cpp  render_window.h  render_window.hpp
src/fractals/: color_palettes.hpp  fractal.h  fractal.hpp  mandelbrot.h  mandelbrot.hpp
